<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:keepScreenOn="true"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_info"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/transparent"
        android:contentDescription="@string/info_button_content_description"
        android:padding="12dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_info"
        android:tint="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/clockContainer"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.example.mamn01_g2.ui.ClockView
            android:id="@+id/clock_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:clockBackgroundColor="@color/orange"
            app:clockProgressColor="@color/progress_color"
            app:clockStrokeWidth="15dp"
            app:clockTextColor="@color/text_color" />

        <com.example.mamn01_g2.ui.TimePicker
            android:id="@+id/time_picker"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

    <TextView
        android:id="@+id/tv_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/rubik"
        android:text="@string/main_instructions"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clockContainer" />

    <Button
        android:id="@+id/btn_lock_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="132dp"
        android:fontFamily="@font/rubik"
        android:text="lock time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clockContainer"
        app:layout_constraintVertical_bias="0.942" />

    <include
        layout="@layout/layout_restart_bubble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/snoozeButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/_5_min"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btn_lock_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
